2010-09-23  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/keyfile.c, src/search.c, src/search.h, doc/geany.txt,
   doc/geany.html:
   Add hidden pref 'find_selection_type' with option to repeat last
   search when there's no selection.
   Change default Find Selection behaviour to not let the X selection
   override the current word (can be confusing).
   Add docs for Find Selection commands.
 * src/document.c:
   Fix segfault on idle callback when quitting.
 * src/interface.c, src/keybindings.c, geany.glade:
   Move 'Edit->Commands->Insert Alternative White Space' to editor popup
   Insert menu.
 * src/interface.c, geany.glade:
   Move editor popup menu Insert Comments submenu to top of Insert menu.
 * src/ui_utils.h, src/document.c, src/ui_utils.c, doc/geany.txt,
   doc/geany.html:
   Add hidden pref new_document_after_close for whether to open a new
   document automatically, off by default.
 * HACKING:
   Add 'Bugs to watch out for' section.


2010-09-22  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/stash.c, doc/Makefile.am, doc/stash-example.c,
   doc/stash-gui-example.c:
   Improve Stash GUI example.


2010-09-21  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/interface.c, geany.glade:
   Move Go to Marker menu items to Search menu.
   Rename popup editor menu item Commands -> Edit.
 * src/callbacks.c, src/search.c, src/search.h:
   Move find_again() to search.c.
 * src/search.c:
   Make Find Selected commands repeat the last search if the selection
   was lost.
 * doc/geany.txt, doc/geany.html:
   Add docs for Find Selection keybindings.
 * src/interface.c, src/keybindings.c, geany.glade:
   Unify Find Selection strings.
 * src/interface.c, src/ui_utils.c, geany.glade:
   Group editor popup Insert commands in a submenu, with extra items
   for the most commonly used Insert Comments commands.
   Show Edit->Commands before Format in menubar Edit menu (to match
   keybindings order).